PyMaker/datas/object2/RawHTML/i6301/Python_DOC_referPages.save-file-to-directory-having-name-starting-with-0-in-python.txt
<div class="post-text" itemprop="text">
<p>I'm trying to use <code>docx</code> package to write some data into a word.docx file. </p>
<p>When trying to change to the save directory, I get an error.</p>
<p>The directory I want to save in is named "002200 - AAA" in say "D" drive.</p>
<p>This is my code:</p>
<pre><code>import os
from docx import Document 

savePth = 'D:\previous folder\002200 - AAA\'
os.chdir(savePth)
</code></pre>
<p>But python complained :</p>
<pre><code>savePth = 'D:\\previous folder\002200 - AAA\'
                                            ^
SyntaxError: EOL while scanning string literal
</code></pre>
<p>I know that <code>\0</code> may mean NULL, so is there anyway I can ask python to save my file to that specific folder named by number?</p>
</div>
<div class="post-text" itemprop="text">
<p>'\' is an <a href="https://en.wikipedia.org/wiki/Escape_character" rel="nofollow noreferrer">escape character</a>, meaning that the symbol following it is interpreted as part of the string. Therefore, python thinks your string never ends because it thinks your ending apostrophe is escaped (part of the string). To 'escape' your escape character, Try this:</p>
<pre><code>from docx import Document 
import os
savePth = 'D:\\previous folder\\002200 - AAA\\'
os.chdir(savePth)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Use <a href="https://docs.python.org/3/library/os.path.html" rel="nofollow noreferrer"><code>os.path.join</code></a>:</p>
<pre><code>savePth = os.path.join('D:', 'previous folder', '002200 - AAA')
os.chdir(savePth)
</code></pre>
<p>Then you don't have to worry about escaping directory separators, and indeed it will handle OS-specific separators automatically depending on what OS it is run from.</p>
</div>
<div class="post-text" itemprop="text">
<p>your string is invalid</p>
<pre><code>savePth = 'D:\\previous folder\\002200 - AAA\\'
</code></pre>
<p>will give you what you want</p>
</div>
<span class="comment-copy">Use \\ to escape</span>
<span class="comment-copy">If you have enough reputation to do so, please mark an answer as "accepted" if it helped you. That helps people who come across your same problem in the future know what worked for you.</span>
<span class="comment-copy">Thanks. This helps,</span>
<span class="comment-copy">Thank you so much. This is the answer I was looking for.</span>
<span class="comment-copy">It seems a good way to do so, but I was trying to figure out what y method wasn't working. Thank you for your answer.</span>
